Fix: Margin in GetGita.jsx for proper spacing in desktop mode. Fix: Change link of Navbar image from Instagram link To "/"

--- a/src/App.css
+++ b/src/App.css
@@ -10,9 +10,7 @@
     scroll-behavior: smooth;
     box-sizing: border-box;
 }
-::-webkit-scrollbar{
-    display: none;
-}
+
 
 :root {
     --primary: #F9C349;
